[tool.poetry]
name = "django-unicorn.com"
version = "0.1.0"
description = "Documentation of django-unicorn"
authors = ["Adam Hill"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "3.1"
django-annoying = "^0.10.6"
python-dotenv = "^0.14.0"
gunicorn = "^20.0.4"
whitenoise = "^5.1.0"
django-compressor = "^2.4"
django-unicorn = "0.18.0"
django-cache-memoize = "^0.1.7"
django-redis = "^4.12.1"
httpx = "^0.14.2"
sentry-sdk = "^0.17.4"
django-docs = {git = "https://github.com/adamghill/django-docs", rev = "a68af62786589bc381d81a165cd8344519931526"}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
isort = "^5.1.1"
black = "^19.10b0"
mypy = "^0.782"
furo = "^2020.12.30-beta.24"
Sphinx = "^3.4.1"
myst-parser = "^0.13.0"
sphinx-copybutton = "^0.3.1"
sphinx-autobuild = "^2020.9.1"
linkify-it-py = "^1.0.1"
rst2pdf = "^0.98"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poe.tasks]
r = "./manage.py runserver 0:8000"
mm = "./manage.py makemigrations"
m = "./manage.py migrate"
md = ["mm", "m"]
ma = "./manage.py"
t = "pytest"
sp = "sphinx-build -E -a -b pdf source docs"
sa = "sphinx-autobuild -b dirhtml source docs"
sb = "sphinx-build -E -a -b dirhtml source docs"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
